Closed
Bug 398466
Opened 18 years ago
Closed 18 years ago
XBL unlinking triggered hash-table recursion assertion (again)
Categories
(Core :: XBL, defect, P2)
Core
XBL
Tracking
()
RESOLVED
FIXED
mozilla1.9beta2
People
(Reporter: jruderman, Assigned: peterv)
References
Details
(Keywords: assertion, crash, regression)
Attachments
(3 files, 1 obsolete file)
|
5.17 KB,
text/plain
|
Details | |
|
5.70 KB,
text/plain
|
Details | |
|
3.13 KB,
patch
|
peterv
:
review+
peterv
:
superreview+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: op == PL_DHASH_LOOKUP || RECURSION_LEVEL(table) == 0: 'op == PL_DHASH_LOOKUP || RECURSION_LEVEL(table) == 0', file pldhash.c, line 585
Like in bug bug 398083, I don't have a testcase, but I do have a stack trace (from XPCOM_DEBUG_BREAK=stack). Unlike in bug 398083, the assertion was not followed by a crash; Firefox exited normally.
Comment 1•18 years ago
|
||
Yeah, that looks like the thing smaug commented on in bug 398083.
Comment 2•18 years ago
|
||
Should add a dep, but I don't recall the bug number.
Comment 3•18 years ago
|
||
| Reporter | ||
Comment 5•18 years ago
|
||
I'm still seeing this occasionally even though the bug this depends on (bug 378866) is fixed. Today, I saw it along with a shutdown crash.
| Reporter | ||
Comment 6•18 years ago
|
||
| Assignee | ||
Updated•18 years ago
|
Assignee: nobody → peterv
Priority: -- → P2
Target Milestone: --- → mozilla1.9 M10
Updated•18 years ago
|
Flags: blocking1.9? → blocking1.9+
| Assignee | ||
Comment 7•18 years ago
|
||
Avoid adding/removing stuff from the hashtables while we're destroying them.
Jesse: are you seeing this frequently? If so, could you try out this patch?
Attachment #291324 -
Flags: superreview?(jonas)
Attachment #291324 -
Flags: review?(jonas)
| Reporter | ||
Comment 8•18 years ago
|
||
I'm not seeing this frequently enough to try out a patch and give a useful answer, sorry.
| Assignee | ||
Comment 9•18 years ago
|
||
Got verbal r/sr=sicking on this one.
Attachment #291324 -
Attachment is obsolete: true
Attachment #291387 -
Flags: superreview+
Attachment #291387 -
Flags: review+
Attachment #291324 -
Flags: superreview?(jonas)
Attachment #291324 -
Flags: review?(jonas)
Updated•18 years ago
|
Whiteboard: [needs landing]
| Assignee | ||
Updated•18 years ago
|
Status: NEW → RESOLVED
Closed: 18 years ago
OS: Mac OS X → All
Hardware: PC → All
Resolution: --- → FIXED
Whiteboard: [needs landing]
You need to log in
before you can comment on or make changes to this bug.
Description
•