Fix for bug 398466 (XBL unlinking triggered hash-table recursion assertion (again)). r/sr=sicking.